Add personal info to index.html

--- a/dbc1.html
+++ b/dbc1.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Welcome</title>
+		<link rel="stylesheet" type="text/css" href="dbc1.css"/>
+		<title>Jess for Prez</title>
 	</head>
 	<body>
-		<h1><a name"top">Heading 1</a></h1>
-		<h2>Heading 2</h2>
+		<h1><a name"top">A Little Bit of Jessica</a></h1>
+		<h2>Highlights:</h2>
+		<p><ul>
+			<li>WordPress <a href="http://helveticajessica.com/portfolio/small-business-web-design/">site design</a>, digital content creation and management, <a href="http://helveticajessica.com/portfolio/print-design-services/">print design</a>.</li>
+			<li>Single-handedly developed and inplemented first successful inventory system for auction house's 100+ consignments with tens of thousands of unique items per month, for $3M in yearly sales. Reduced inventory mistakes and complaints by 90%, saving company tens of thousands of dollars.</li>
+			<li>Spend the year of 2013 traveling to 13 countries on 4 continents, while working remotely and <a href="https://www.trustedhousesitters.com/house-and-pet-sitters/8259-jssc29/" target="_blank">petsitting</a>.</li>
+			<li>Lead salesperson, order management, supervisor for retail department with $2M yearly sales</li>
+			<li>Managed and taught communication and personal leadership skills to nonprofit fundraisers.</li>
+			<li>Earned a 0% Error Award for best attention to detail in history of the award at national nonprofit.</li>
+			<li><a href="https://www.linkedin.com/profile/view?id=230966028" target="_blank">LinkedIn profile</a>. 
+			</ul></p>
+		<p><ol>
+			<li>Item</li>
+			<li>Item</li>
+			<li>Item</li>
+			</ol></p>
 		<h3>Heading 3</h3>
 		<p>A very, very short paragraph.</p>
 		<h4>Heading 4</h4>
@@ -15,10 +30,11 @@
 		<h6>No, not really</h6>
 		<p><em>This whole paragraph is <strong>italicized</strong> because, why not?</em></p>
 		<p>Or find something more interesting to read via <a href="http://www.google.com">Google</a>
-		<p><a href="mailto:emmaleth2003@yahoo.com">Email my junkmail address</a> if you want to send hate mail.
-		<p>You know, I was just looking at <a href="http://www.oocities.org/" target="_blank">oocities.org</a> the other day, and my website here reminds me of that.</p>
+		<p>Contact Jessica at<a href="mailto:jessica@helveticajessica.com">jessica@helveticajessica.com</a></p>
+		<p>
 		<img src="http://www.freeimages.com/assets/183003/1830029572/daisy-abstract-1445820-s.jpg"/><br>
-		<a href="http://www.freeimages.com/category/100"><img src="http://www.freeimages.com/assets/183003/1830029572/daisy-abstract-1445824-s.jpg"/></a>
+		<a href="http://www.freeimages.com/category/100"><img src="http://www.freeimages.com/assets/183003/1830029572/daisy-abstract-1445824-s.jpg"/></a><p>
+
 		<p><ul>
 			<li>Item 1</li>
 			<li>Item 2</li>
