--- a/dbc1.html
+++ b/dbc1.html
@@ -21,16 +21,16 @@
 			<li>Item</li>
 			<li>Item</li>
 			</ol></p>
-		<h3>Heading 3</h3>
+		<h3>I Promise I Will Find Inspiration For Future Assignments</h3>
 		<p>A very, very short paragraph.</p>
 		<h4>Heading 4</h4>
-		<p>Kind of underwhelming, isn't it?</p>
+		<p>Kind of <div id="green">underwhelming</div>, isn't it?</p>
 		<h5>Heading 5</h5>
 		<p>This is the kind of copywriting they pay big bucks for.</p>
 		<h6>No, not really</h6>
 		<p><em>This whole paragraph is <strong>italicized</strong> because, why not?</em></p>
-		<p>Or find something more interesting to read via <a href="http://www.google.com">Google</a>
-		<p>Contact Jessica at<a href="mailto:jessica@helveticajessica.com">jessica@helveticajessica.com</a></p>
+		<p><div class="boring">Or find something more interesting to read via <a href="http://www.google.com">Google</a></div>
+		<p>Contact Jessica at <a href="mailto:jessica@helveticajessica.com">jessica@helveticajessica.com</a></p>
 		<p>
 		<img src="http://www.freeimages.com/assets/183003/1830029572/daisy-abstract-1445820-s.jpg"/><br>
 		<a href="http://www.freeimages.com/category/100"><img src="http://www.freeimages.com/assets/183003/1830029572/daisy-abstract-1445824-s.jpg"/></a><p>
@@ -44,7 +44,7 @@
 			<li>Item</li>
 			<li>Item</li>
 			</ol></p>
-		<p>Click <a href="#top">here</a> to go back to the top.</p>
+		<p><div class="boring">Click <a href="#top">here</a> to go back to the top.</div></p>
 
 	</body>
 </html>
