Update index.html and gps1.1.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<html><body>Hello DBC!</body></html>
+<html><body>Hello DBC!
+
+<a href="http://jarmstrng.github.io/unit1_projects/gps1.1.html">Guided Pairing Session 1.1</a>
+
+
+
+
+</body></html>
