--- a/unit1_projects/gps1.1.html
+++ b/unit1_projects/gps1.1.html
@@ -7,7 +7,7 @@ Write your names here:
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="gps1.1.css">
+    <link rel="stylesheet" href="stylesheets/gps1.1.css">
     <title>Title Here</title>
   </head>
   <body>
