--- a/blog_posts/week3_technical.html
+++ b/blog_posts/week3_technical.html
@@ -5,7 +5,7 @@
     <title>Happy Blog Times</title>
   </head>
   <body>
-    <h1>jarmstrng's Blog/h1>
+    <h1>jarmstrng's Blog</h1>
     <p>Note: I have not yet completed Week 1 (started late) and that is why I do not have an attractive template yet. I would like to be able to submit Week 3, though, which is why this blog post exists despite the lact of attractiveness.</p>
 
 <h2>JavaScript - The Big JS</h2>
