--- a/blog_posts/week6_cultural_blog.html
+++ b/blog_posts/week6_cultural_blog.html
@@ -57,6 +57,8 @@
 
 	<p>What do <em>you</em> value? What makes you unique?</p>
 
+	<p>(For a thoughtful piece on growth and deepening understanding, see Kelly Yamamoto's <a href="http://minedamnesia.github.io/blog-posts/week6_cultural.html" target="new">Stereotype Threat</a>.)
+
 	<h2>Bonus: Creating An Inclusive Environment</h2>
 	<p>Not being drawn into a negative stereotype is a fantastic goal, but an even more noble one is to help prevent others from experiencing steroetype threat as well. The question of how to address stereotype threat in school or in the workplace is a tricky one, though. </p>
 
