--- a/blog_posts/post_template.html
+++ b/blog_posts/post_template.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Blogging Fun Times</title>
 
-	<link rel="stylesheet" media="screen" href="217.css">
+	<link rel="stylesheet" media="screen" href="css_template.css">
 	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://www.csszengarden.com/zengarden.xml">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -55,7 +55,7 @@ This CSS design was heavily lifted from the Creative Commons "Handcrafted" by El
 		</div>
 
 		<footer>
-			<h4>Acknowledgements</h4>
+			<p>Acknowledgements</p>
 			<p>As it goes with technology, I am simply standing on the shoulders of those who came before (no vacuum tubes for me).</p> 
 			<p>HUGE shoutout to the lovely <a href="http://www.csszengarden.com/" target="blank">Dave Shea</a> and <a href="http://www.elliotjaystocks" target="blank">Elliot Jay Stocks</a>, from whom I shamelessly lifted the bones of this here website ye see before ye.</p>
 		</footer>
