--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Blogging Fun Times</title>
 
-	<link rel="stylesheet" media="screen" href="217.css">
+	<link rel="stylesheet" media="screen" href="crafted2.css">
 	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://www.csszengarden.com/zengarden.xml">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
