--- a/blog_posts/post_template.html
+++ b/blog_posts/post_template.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Blogging Fun Times</title>
 
-	<link rel="stylesheet" media="screen" href="css_template.css">
+	<link rel="stylesheet" media="screen" href="http://jarmstrng.github.io/crafted2.css">
 	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://www.csszengarden.com/zengarden.xml">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -50,7 +50,7 @@ This CSS design was heavily lifted from the Creative Commons "Handcrafted" by El
 		</div>
 
 		<div class="participation" id="zen-participation" role="article">
-			<h3>Exploring the unknown requires tolerating uncertainty.</h3>
+			<h4>Exploring the unknown requires tolerating uncertainty.</h4>
 			<p>Brian Greene</p>
 		</div>
 
