Added new post link

--- a/index.html
+++ b/index.html
@@ -89,11 +89,13 @@ This CSS design was heavily lifted from the Creative Commons "Handcrafted" by El
 				<h3 class="select">DevBootcamp:</h3>
 				<nav role="navigation">
 					<ul>
-					<li>
-						<a href="http://jarmstrng.github.io/blog_posts/week5_cultural.html" class="design-name">DevBootcamp Pairing/Feedback Q and A</a>
-					</li>					
-						<a href="http://jarmstrng.github.io/blog_posts/week1_technical.html">Hello World</a>
-					</li>					</ul>
+						<li>
+							<a href="http://jarmstrng.github.io/blog_posts/week5_cultural.html" class="design-name">DevBootcamp Pairing/Feedback Q and A</a></li>
+						<li>
+							<a href="http://jarmstrng.github.io/blog_posts/week8_review.html" class="design-name">Reflections on Blogging</a></li>										
+						<li>		
+							<a href="http://jarmstrng.github.io/blog_posts/week1_technical.html">Hello World</a></li>	
+					</ul>
 				</nav>
 			</div>
 
