Added Week8 links

--- a/index.html
+++ b/index.html
@@ -79,11 +79,15 @@ This CSS design was heavily lifted from the Creative Commons "Handcrafted" by El
 					</li>					<li>
 						<a href="http://jarmstrng.github.io/blog_posts/week6_technical.html" class="design-name">Ruby's Object-Orientedness, Inheritance, Concurrency, Clojure, Software Transactional Memory, Functional Programming...</a>
 					</li>					<li>
-						<a href="http://jarmstrng.github.io/blog_posts/week6_cultural_blog.html" class="design-name">How To Be More Than A Stereotype</a>
-					</li>					<li>
 						<a href="http://jarmstrng.github.io/blog_posts/week7_technical.html" class="design-name">SQL Query Optimization</a>
 					</li>					<li>
+						<a href="http://jarmstrng.github.io/blog_posts/week8_technical.html" class="design-name">Active Record in Ruby/Rails</a>
+					</li>					<li>
 						<a href="http://jarmstrng.github.io/blog_posts/week7_cultural.html" class="design-name">The Value of Continued Learning</a>
+					</li>					<li>
+						<a href="http://jarmstrng.github.io/blog_posts/week6_cultural_blog.html" class="design-name">How To Be More Than A Stereotype</a>
+					</li>					<li>
+						<a href="http://jarmstrng.github.io/blog_posts/week8_cultural_blog.html" class="design-name">Workplace Conflict & Integrity</a>
 					</li>					</ul>
 				</nav>
 				<h3 class="select">DevBootcamp:</h3>
