--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@ This CSS design was heavily lifted from the Creative Commons "Handcrafted" by El
 						<a href="http://jarmstrng.github.io/blog_posts/week6_cultural_blog.html" class="design-name">How To Be More Than A Stereotype</a>
 					</li>					<li>
 						<a href="http://jarmstrng.github.io/blog_posts/week8_cultural_blog.html" class="design-name">Workplace Conflict & Integrity</a>
+					</li>					<li>
+						<a href="http://lunacraz.github.io/blog-posts/week9_cheatsheet.html" class="design-name">J&V's Fantastic JavaScript Syntax Cheatsheet</a>
 					</li>					</ul>
 				</nav>
 				<h3 class="select">DevBootcamp:</h3>
