--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@ This CSS design was heavily lifted from the Creative Commons "Handcrafted" by El
 						<a href="http://jarmstrng.github.io/blog_posts/week8_cultural_blog.html" class="design-name">Workplace Conflict & Integrity</a>
 					</li>					<li>
 						<a href="http://lunacraz.github.io/blog-posts/week9_cheatsheet.html" class="design-name">J&V's Fantastic JavaScript Syntax Cheatsheet</a>
+					</li>					<li>
+						<a href="http://jarmstrng.github.io/blog_posts/week9_cultural_blog.html" class="design-name">Newbies: Get the Help You Need by Asking the Right Questions</a>
 					</li>					</ul>
 				</nav>
 				<h3 class="select">DevBootcamp:</h3>
