Add noindex nofollow bc this ain't the real site

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <!-- ## SITE META ## -->
+  <meta name="robots" content="noindex,nofollow">
   <meta charset="utf-8">
   <title>Write/Speak/Code</title>
   <meta name="description" content="">
