--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
   <!-- ## SITE META ## -->
-  <meta name="robots" content="noindex,nofollow">
   <meta charset="utf-8">
   <title>Write/Speak/Code</title>
   <meta name="description" content="">
@@ -12,17 +11,17 @@
   <link rel="canonical" href="https://www.writespeakcode.com/index.html" />
 
   <!-- ## SOCIAL TAGS ## -->
-<!--   <meta property="og:locale" content="en_US" />
+  <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="2017 Write/Speak/Code Conference for Women in Tech" />
-  <meta property="og:description" content="Level up your career over 4 days designed to polish your skills and fully own your expertise through writing, speaking, and open source." />
-  <meta property="og:url" content="https://2017.writespeakcode.com/index.html" />
+  <meta property="og:title" content="Write/Speak/Code" />
+  <meta property="og:description" content="Leveling up women and non-binary coders through writing, speaking, and open source." />
+  <meta property="og:url" content="www.writespeakcode.com" />
   <meta property="og:image" content="https://2017.writespeakcode.com/assets/img/write-speak-code-conference.jpg" />
-  <meta name=”twitter:title” content=”2017 Write/Speak/Code Conference for Women in Tech” />
-  <meta name=”twitter:description” content=”Level up your career over 4 days designed to polish your skills and fully own your expertise through writing, speaking, and open source.” />
-  <meta name=”twitter:url” content=”https://2017.writespeakcode.com/index.html” />
+  <meta name=”twitter:title” content=”Write/Speak/Code” />
+  <meta name=”twitter:description” content=”Leveling up women and non-binary coders through writing, speaking, and open source.” />
+  <meta name=”twitter:url” content=”www.writespeakcode.com/index.html” />
   <meta name=”twitter:image” content=”https://2017.writespeakcode.com/assets/img/WSC-coral-bg.jpg” />
-  <meta name="twitter:widgets:link-color" content="#EB6851"> -->
+  <meta name="twitter:widgets:link-color" content="#EB6851">
 
   <!-- ## FLEXBOX GRID ## -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
@@ -37,7 +36,7 @@
 
 <body>
   <section class="page-intro">
-    <!-- ## PRIMARY HEADER ## -->
+    <!-- ## PRIMARY LOGO ## -->
     <header class="row center-xs">
       <div class="col-xs-12">
         <a href="http://www.writespeakcode.com" target="_blank" rel="noopener">
@@ -46,49 +45,28 @@
       </div>
     </header>
 
-    <!-- ## FULLSCREEN SLIDES ## -->
+    <!-- ## TITLE & SUBHEAD ## -->
     <div id="slideContent">
       <!-- ## SLIDE TEXT ## -->
       <div id="qcSlideText">
         <h1 class="wsc-logo-text">Write <span class="coral">/</span> Speak <span class="coral">/</span> Code<br>
         <span class="wsc-conf-text"></span></h1>
         <!-- <h3 class="title-subheader">Aug 23-26 // Portland, OR </h3> -->
-        <p class="title-subheader">Write/Speak/Code is on a mission to empower women and non-binary software developers to become thought leaders, conference speakers, and open source contributors. We run conferences and events across the US.</p>
+        <p class="title-subheader">Write/Speak/Code is on a mission to empower women and non-binary coders to become thought leaders, conference speakers, and open source contributors. We run conferences and events across the US.</p>
       </div>
     </div>
   </section>
 
 
-  <!-- ## SCHEDULE SECTION ## -->
-<!--   <section class="schedule-section" id="schedule">
-    <div class="qcTabTitle qcContainer clearfix">
-      <div class="col-4 col">
-        <h2 class="section-title">SCHEDULE</h2>
-      </div>
-      <div class="col-8 col">
-        <p class="qcTabDesc">By the end of this intensive 4-day conference for women and non-binary people in tech, each attendee will possess and polish the skills necessary to fully own their expertise as thought leaders, conference speakers, and open source contributors.</p>
-      </div>
-    </div>
-    <div class="hentry qcContainer">
-    </div>
-  </div>
-</section> -->
-
-
   <!-- ## CONFERENCES SECTION ## -->
   <section class="sponsors-section" id="speakers">
-  <!-- <section class="sponsors-section" id=""> -->
-    <!-- <div class="qcContainer qcTabTitle clearfix"> -->
     <div class="qcContainer qcTabTitle clearfix" style="border-bottom: 1px #555 solid;">
       <div>
         <div class="col-4 col">
-        <!-- <div class="col-4 col"> -->
-          <!-- <h2 class="section-title">CHAPTERS</h2> -->
           <h2 class="section-title" id="conferences-title">CONFERENCES</h2>
         </div>
-        <!-- <div class="col-8 col"> -->
         <div class="col-8 col">
-          <p class="qcTabDesc">Women in tech, let's take your career to the next level!
+          <p class="qcTabDesc">Women and non-binary coders, let's take your career to the next level!
             Join us for 4 days designed to polish your skills and fully own your expertise through writing, speaking, and open source.<br /><br />2018 Write/Speak/Code conference details coming soon! For now, check out <a href="https://2017.writespeakcode.com" target="_blank" rel="noopener" title="2017 W/S/C conference page">the 2017 conference</a>.</p>
         </div>
       </div>
@@ -131,8 +109,6 @@
     </div>
     <!-- ## mailingPAGE WIDGETS END ## -->
 
-<!--     <div class="qcContainer qcTabTitle clearfix">
-    </div> -->
   </section>
 
 
@@ -144,7 +120,7 @@
           <h2 class="section-title">CHAPTERS</h2>
         </div>
         <div class="col-8 col">
-          <p class="qcTabDesc">Write/Speak/Code holds meetups and full-day workshops in cities across the country, including Chicago, Los Angelos, New York City, San Francision/Bay Area, and Atlanta.<br /><br ><a href="https://www.meetup.com/pro/writespeakcode" target="_blank" rel="noopener" title="Write/Speak/Code meetup chapters" class="link coral">Explore chapter events</a>.</p>
+          <p class="qcTabDesc">Write/Speak/Code holds meetups and full-day workshops in cities across the country, including Chicago, Los Angelos, New York City, San Francision/Bay Area, and Atlanta.<br /><br ><a href="https://www.meetup.com/pro/writespeakcode" target="_blank" rel="noopener" title="Write/Speak/Code meetup chapters" class="link coral"><strong>Explore chapter events</strong></a></p>
         </div>
       </div>
     </div>
@@ -159,7 +135,7 @@
           <h2 class="section-title">Sponsors</h2>
         </div>
         <div class="col-8 col">
-          <p class="qcTabDesc" style="color: #F1D8D3;">For great companies for women, sponsorship is the most effective way to recruit talented, driven women to fill key technical positions and demonstrate your commitment to the professional development of women at your organization. Write/Speak/Code is a 501c3 nonprofit. Contact <a href="mailto:sponsor@writespeakcode.com" target="_top">sponsor@writespeakcode.com</a> to learn more.<br /> <br /><a href="assets/sponsor-prospectus.pdf" target="_blank" rel="noopener" class="link coral"><strong>read our 2017 Prospectus</strong></a></p>
+          <p class="qcTabDesc" style="color: #F1D8D3;">For great employers, sponsorship is the most effective way to recruit talented, driven women and non-binary coders to fill key technical positions and demonstrate your commitment to the professional development of people of underrepresented genders at your organization. Write/Speak/Code is a 501c3 nonprofit. Contact <a href="mailto:sponsor@writespeakcode.com" target="_top">sponsor@writespeakcode.com</a> to learn more.<br /> <br /><a href="https://2017.writespeakcode.com/assets/sponsor-prospectus.pdf" target="_blank" rel="noopener" class="link coral sponsor-link"><strong>read our 2017 Prospectus</strong></a></p>
         </div>
       </div>
     </div>
@@ -176,24 +152,30 @@
       </div>
         <ul class="testimonials-carousel hentry clearfix">
           <li>
+            <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Feeling so empowered after <a href="https://twitter.com/hashtag/wsc2017conf?src=hash">#wsc2017conf</a> in PDX that I just submitted my first CFP! Thanks a million <a href="https://twitter.com/WriteSpeakCode">@WriteSpeakCode</a> 😁💖</p>&mdash; Rachael Berecka‏ (@das_Rachaelchen) <a href="https://twitter.com/das_Rachaelchen/status/901665710954299393">August 26, 2017</a>
+            </blockquote>
+          </li>
+          <li>
             <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">True Story. This conference changed my life and is the reason why I now write and speak about code. And Im only one of many! <a href="https://twitter.com/WriteSpeakCode">@WriteSpeakCode</a> <a href="https://t.co/WZUxrkwcud">https://t.co/WZUxrkwcud</a></p>&mdash; Angie Jones (@techgirl1908) <a href="https://twitter.com/techgirl1908/status/802645541985210368">November 26, 2016</a>
             </blockquote>
           </li>
           <li>
-            <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">THE RUMORS ARE TRUE: <a href="https://twitter.com/WriteSpeakCode">@WriteSpeakCode</a> is an amazing conference. Super hands-on, inclusive, empowering. <a href="https://twitter.com/hashtag/wsc2016conf?src=hash">#wsc2016conf</a></p>&mdash; Siena (@sienatime) <a href="https://twitter.com/sienatime/status/743205226434400256">June 15, 2016</a></blockquote>
+            <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">thank u <a href="https://twitter.com/hashtag/wsc2017conf?src=hash">#wsc2017conf</a> for consistently being the best event for women in software 🙏 I have met so many inspiring bad ass women this week 😍</p>&mdash; Alex Qin (@alexqin) <a href="https://twitter.com/alexqin/status/901591252088406016">August 26, 2017</a>
+            </blockquote>
           </li>
           <li>
-            <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">I am in awe of the developers I’ve met <a href="https://twitter.com/WriteSpeakCode">@WriteSpeakCode</a> today.  Seriously!</p>&mdash; Emily Stamey (@elstamey) <a href="https://twitter.com/elstamey/status/743287577503989760">June 16, 2016</a></blockquote>
-          </li>
-          <li>
-            <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">One of the best conferences I went to in 2016. <a href="https://twitter.com/hashtag/writespeakcode?src=hash">#writespeakcode</a> <a href="https://twitter.com/hashtag/wsc?src=hash">#wsc</a> <a href="https://t.co/rznCoNE506">https://t.co/rznCoNE506</a></p>&mdash; Nicolette Chambers (@nicolette3883) <a href="https://twitter.com/nicolette3883/status/817353447423045632">January 6, 2017</a>
+            <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Is too much inspiration a thing? <a href="https://twitter.com/hashtag/wsc2017conf?src=hash">#wsc2017conf</a> inspired me to write again so much  so that I have written 3 new blog posts in the last 4 days</p>&mdash; Michelle Levine (@MichelleJLevine) <a href="https://twitter.com/MichelleJLevine/status/901547255882067968">August 26, 2017</a>
             </blockquote>
           </li>
           <li>
             <blockquote class="twitter-tweet" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr"><a href="https://twitter.com/WriteSpeakCode">@WriteSpeakCode</a> is legit one of the best conferences I&#39;ve ever attended 😂🙌🏾💁🏽 <a href="https://twitter.com/hashtag/wsc2016conf?src=hash">#wsc2016conf</a> <a href="https://twitter.com/hashtag/WeLoveColor?src=hash">#WeLoveColor</a> 🎨 <a href="https://t.co/c2Ga7DMVEY">pic.twitter.com/c2Ga7DMVEY</a></p>&mdash; Debbie-jean Lemonte (@TheLocdBella) <a href="https://twitter.com/TheLocdBella/status/744267099380547584">June 18, 2016</a></blockquote>
           </li>
           <li>
-            <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Having a fabulous time <a href="https://twitter.com/WriteSpeakCode">@WriteSpeakCode</a>. Honored to be a speaker &amp; thrilled to be a part of a safe, welcoming community.</p>&mdash; Iris Amelia 📎✊🏽 (@epubpupil) <a href="https://twitter.com/epubpupil/status/743953040894484480">June 17, 2016</a></blockquote>
+            <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">THE RUMORS ARE TRUE: <a href="https://twitter.com/WriteSpeakCode">@WriteSpeakCode</a> is an amazing conference. Super hands-on, inclusive, empowering. <a href="https://twitter.com/hashtag/wsc2016conf?src=hash">#wsc2016conf</a></p>&mdash; Siena (@sienatime) <a href="https://twitter.com/sienatime/status/743205226434400256">June 15, 2016</a></blockquote>
+          </li>
+          <li>
+            <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">from the moment I wrote my first line of code over a decade ago, I've yearned for a sense of belonging &amp; community I found at <a href="https://twitter.com/hashtag/wsc2017conf?src=hash">#wsc2017conf</a></p>&mdash; .‏ (@emmatcu) <a href="https://twitter.com/emmatcu/status/901710289690796032">August 26, 2017</a>
+            </blockquote>
           </li>
           <li>
             <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">glad to see <a href="https://twitter.com/WriteSpeakCode">@WriteSpeakCode</a> organizers are easily identifiable by their shiny purple sashes. CRUCIAL to enforce a code of conduct!</p>&mdash; Cat (@cfarm) <a href="https://twitter.com/cfarm/status/743839976069152769">June 17, 2016</a></blockquote>
@@ -204,18 +186,6 @@
   </section>
 
 
-  <!-- ## FAQ SECTION ## -->
-<!--   <section class="faq-section" id="faq">
-    <div class="qcContainer qcTabTitle clearfix">
-      <div class="col-4 col">
-        <h2 class="section-title">FAQ's</h2>
-      </div>
-    </div>
-    <div class="hentry qcContainer">
-    </div>
-  </section> -->
-
-
   <!-- ## CODE OF CONDUCT SECTION ## -->
   <section class="code-of-conduct-section" id="code-of-conduct">
     <div class="qcContainer qcTabTitle clearfix">
@@ -224,7 +194,7 @@
           <h2 class="section-title">Code of Conduct</h2>
         </div>
         <div class="col-xs-12 col-sm-6 section-button-cta">
-          <a href="code-of-conduct.html" target="_blank" rel="noopener" class="button secondary">Read the full Code of Conduct</a>
+          <a href="code-of-conduct.html" class="button secondary">Read the full Code of Conduct</a>
         </div>
       </div>
     </div>
@@ -236,7 +206,7 @@
         </div>
         <div class="col-xs-12 col-sm-5 col-md-4 col-md-offset-1 rounded-corners need-help hidden-on-xs">
           <h3>Need Help?</h3>
-          <h4>Our contact information will be provided to all conference participants and speakers upon registration.</h4>
+          <h4>Our contact information will be provided to all event participants upon registration.</h4>
         </div>
       </div>
     </div>
@@ -272,8 +242,6 @@
 
   <!-- ## LOAD JAVASCRIPTS ## -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <!-- <script src="./assets/js/2.2.2.jquery.min.js" type="text/javascript"></script> -->
-  <script src="./assets/js/countdown.js" type="text/javascript"></script>
   <script src="./assets/js/owl.carousel.min.js" type="text/javascript"></script>
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	<script src="./assets/js/jquery.gridder.min.js" type="text/javascript"></script>
@@ -290,25 +258,34 @@
     ga('send', 'pageview');
 
   </script> -->
-<!--   <script type="application/ld+json">
+  <script type="application/ld+json">
     [{
       "@context": "http://schema.org",
-      "@type" : "EventSeries",
-      "name": "2017 WriteSpeakCode Conference",
-      "url": "https://2017.writespeakcode.com",
-      "startDate": "2017-08-23",
-      "endDate": "2017-08-26",
-      "description": "Conference for women in tech",
+      "@type": "NGO",
+      "name": "WriteSpeakCode",
+      "url": "www.writespeakcode.com",
+      "email": "info@writespeakcode.com",
+      "description": "Write/Speak/Code empowers women and non-binary coders to become thought leaders, conference speakers, and open source contributors, through conferences and events across the US.",
+      "logo": "https://2017.writespeakcode.com/assets/img/WSClogos_stacked_coral-blush-gold_screen.png",
       "image": "https://2017.writespeakcode.com/assets/img/WSClogos_stacked_coral-blush-gold_screen.png",
-      "location": {
-        "@type": "EventVenue",
-        "name": "Eliot Center",
-        "address": "Portland, OR"
-      },"offers": [{
-        "@type": "Offer",
-        "url": "https://ti.to/write-speak-code/2017-conference/"
+      "events":     [{
+        "@type" : "EventSeries",
+        "name": "2017 WriteSpeakCode Conference",
+        "url": "https://2017.writespeakcode.com",
+        "startDate": "2017-08-23",
+        "endDate": "2017-08-26",
+        "description": "Conference for women and non-binary coders",
+        "image": "https://2017.writespeakcode.com/assets/img/WSClogos_stacked_coral-blush-gold_screen.png",
+        "location": {
+          "@type": "EventVenue",
+          "name": "Eliot Center",
+          "address": "Portland, OR"
+        },"offers": [{
+          "@type": "Offer",
+          "url": "https://ti.to/write-speak-code/2017-conference/"
+        }]
       }]
     }]
-  </script> -->
+  </script>
 </body>
 </html>
