--- a/2018-conference.html
+++ b/2018-conference.html
@@ -384,7 +384,7 @@
 
 
 
-  <footer class="footer-section">
+  <footer class="footer-section" style="background-color:#172751 !important;">
     <div class="qcContainer">
       <div class="row middle-xs">
         <div class="col-xs-12 col-sm-2 center-xs">
